<resources>
    <string name="app_name">На мели</string>

    <string name="welcome_text">Добро пожаловать!</string>
    <string name="promo_text">Грамотно спланируйте бюджет и накопите на свою мечту вместе с \"На мели\"</string>

    <string name="create_an_account">Создать учетную запись</string>

    <string name="enter_username">Введите имя пользователя</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>

    <string name="sign_in_text">Войти</string>
    <string name="sign_up_text">Зарегистрироваться</string>

    <string name="invalid_username">Введите имя пользователя</string>
    <string name="invalid_email">E-mail введен некорректно</string>
    <string name="invalid_password">Пароль должен содержать более 5 символов </string>
    <string name="invalid_repeat_password">Пароли не совпадают</string>

    <string name="privacy_policy">Политика конфиденциальности</string>

    <string name="remember_me">Запомнить меня</string>
    <string name="forgot_password">Забыли пароль?</string>

    <string name="enter_via_social_network">Вход через соц. сети</string>


</resources>
