<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/welcome_image_image_view"
        android:layout_width="300dp"
        android:layout_height="300dp"

        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/welcome_text_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/welcome_image_image_view"/>
    <TextView
        android:id="@+id/promo_text_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/promo_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/welcome_text_text_view"/>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="212dp"
        android:layout_height="36dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/promo_text_text_view"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"

        android:text="@string/sign_in_text"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="212dp"
        android:layout_height="36dp"

        android:layout_marginTop="16dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_in_button"
        android:background="@color/colorBlue"
        android:textColor="@android:color/white"

        android:text="@string/sign_up_text"/>

</RelativeLayout>
