<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.welcome.sign_up.SignUpFragment">


    <ImageView
        android:id="@+id/sign_up_logo_image_view"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="40dp"

        android:background="@color/colorPrimaryDark"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sign_up_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="17dp"

        android:text="@string/create_an_account"
        android:textSize="24sp"
        android:textColor="@android:color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_logo_image_view"/>

    <EditText
        android:id="@+id/sign_up_username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="60dp"

        android:hint="@string/enter_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title_text_view" />

    <EditText
        android:id="@+id/sign_up_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="25dp"

        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username_edit_text"/>

    <EditText
        android:id="@+id/sign_up_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="25dp"

        android:hint="@string/enter_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edit_text" />

    <EditText
        android:id="@+id/sign_up_repeat_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="25dp"

        android:hint="@string/repeat_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text" />

    <Button
        android:id="@+id/sign_up_button_button"
        android:layout_width="212dp"
        android:layout_height="36dp"

        android:layout_marginStart="48dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="48dp"

        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/sign_up_text"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_repeat_password_edit_text"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/sign_up_privacy_policy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"

        android:layout_gravity="start"
        android:text="@string/privacy_policy"
        android:textSize="16sp"
        android:textColor="@color/colorBlue"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button_button" />

    <TextView
        android:id="@+id/sign_up_error_message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"

        android:textSize="16sp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_privacy_policy_text_view"

        tools:text="ERROR"/>

</android.support.constraint.ConstraintLayout>