<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"

    tools:context=".ui.welcome.sign_in.SignInFragment">

    <ImageView
        android:id="@+id/sign_in_logo_image_view"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="40dp"

        android:background="@color/colorPrimaryDark"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sign_in_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="17dp"

        android:text="@string/sign_in_text"
        android:textSize="24sp"
        android:textColor="@android:color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_logo_image_view"/>

    <EditText
        android:id="@+id/sign_in_username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="60dp"

        android:hint="@string/enter_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_title_text_view"/>

    <EditText
        android:id="@+id/sign_in_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/enter_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_username_edit_text" />

    <TextView
        android:id="@+id/sign_in_forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"

        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@color/colorDarkBlue"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edit_text"
        app:layout_constraintLeft_toRightOf="@+id/sign_in_remember_me_check_box" />

    <CheckBox
        android:id="@+id/sign_in_remember_me_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:text="@string/remember_me"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_forgot_password_text_view"/>

    <Button
        android:id="@+id/sign_in_button_button"
        android:layout_width="212dp"
        android:layout_height="36dp"

        android:layout_marginStart="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="48dp"

        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/sign_in_text"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_remember_me_check_box"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/social_network_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"

        android:text="@string/enter_via_social_network"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button_button" />

    <LinearLayout
        android:id="@+id/social_network_icons_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"

        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_network_title_text_view">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"

            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"

            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"

            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"



            android:background="@color/colorPrimaryDark" />


    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_privacy_policy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"

        android:layout_gravity="start"
        android:text="@string/privacy_policy"
        android:textSize="16sp"
        android:textColor="@color/colorBlue"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_network_icons_linear_layout" />

    <TextView
        android:id="@+id/sign_in_error_message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"

        android:textSize="16sp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_privacy_policy_text_view"
        tools:text="ERROR"/>

</android.support.constraint.ConstraintLayout>